Fix element controls z-index #276878098803537

--- a/public/sources/less/wpbackend/layout/variables.less
+++ b/public/sources/less/wpbackend/layout/variables.less
@@ -5,7 +5,8 @@
 @vcv-wpbackend-zindex: @vcv-wpbackend-layout-zindex + 100;
 @vcv-wpbackend-content-zindex: @vcv-wpbackend-layout-zindex;
 @vcv-wpbackend-item-preview-zindex: 2011;
-@vcv-wpbackend-layout-header-zindex: 9991; // overrides Wordpress's #adminmenuwrap z-index: 9990
+@vcv-wpbackend-layout-header-zindex: 1130; // overrides Wordpress's #adminmenuwrap z-index: 9990
+@vcv-wpbackend-layout-header-zindex-hover: 9991; // overrides Wordpress's #adminmenuwrap z-index: 9990
 @vcv-wpbackend-control-dropdown-zindex: @vcv-wpbackend-layout-header-zindex + 1;
 
 //=========================================
